src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>C360_Dev_Team_Categorization__c</fullName>
        <description>This field will capture the nature of the idea</description>
        <label>C360 Dev Team Categorization</label>
        <picklist>
            <picklistValues>
                <fullName>C360 Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question/Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and Assets Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C360_Dev_Team_Comments__c</fullName>
        <description>This will capture comments related to the Categorization</description>
        <label>C360 Dev Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C360_Expected_Fix_Deploy_Date__c</fullName>
        <label>C360 Expected Fix/Deploy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Distribution Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Institutional - Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Institutional - Consultant Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Institutional - Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Institutional - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing - RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail Dealer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail Sales - MIL (external)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail Sales - MIL (Internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail - Dealer Relations &amp; ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail - RIA or DCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail Sales - MFD (external)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail Sales - MFD (Internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dial-A-Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS - CDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Request Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C360 Development Team</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Functionality_Tested__c</fullName>
        <label>Functionality Tested</label>
        <picklist>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity/Business At Risk and Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding/Offboarding Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Request Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Critical for Go-Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nice to Have</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Test_Case__c</fullName>
        <label>UAT Test Case #</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WiP_Feedback</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All WiP Feedback</label>
    </listViews>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.BODY</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WIP_3</fullName>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.BODY</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/10/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>5/30/2016 12:00 AM</value>
        </filters>
        <label>WIP#3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WIP_4</fullName>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.BODY</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>6/20/2016 12:00 AM</value>
        </filters>
        <label>WIP#4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WiP_1</fullName>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.BODY</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/29/2016 12:00 AM</value>
        </filters>
        <label>WiP#1</label>
    </listViews>
    <listViews>
        <fullName>WiP_2</fullName>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.BODY</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/3/2016 12:00 AM</value>
        </filters>
        <label>WiP#2</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Ambassador Community: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IdeaCategoryisBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Categories)</errorConditionFormula>
        <errorMessage>Please select a Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdeaDescriptionisBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Body )</errorConditionFormula>
        <errorMessage>Please enter a Description in the Idea body</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdeaStatusisBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Please add a Status</errorMessage>
    </validationRules>
</CustomObject>